# CauseHive

./: .dockerignore  .gitignore  Dockerfile  MONOLITH_README.md  RAILWAY_MIGRATION_GUIDE.md  RAILWAY_TROUBLESHOOTING.md  README.md  WARP.md  causehive_local.db  deploy_backend_updates.sh  deploy_to_railway.sh  docker-compose.yml  main.py  migrate_databases.py  netlify.toml  package-lock.json  pyproject.toml  test_build.py  test_causes_api.py  test_db_connections.py  test_deployment.py  verify_cause_detail_page.py
backend/: .dockerignore  .env.example  API_DOCUMENTATION.md  COMPREHENSIVE_SYSTEM_DOCUMENTATION.md  Dockerfile  EMAIL_SYSTEM_DOCUMENTATION.md  GOOGLE_OAUTH_SETUP.md  README.md  asgi.py  celerybeat-schedule  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  run_celery.sh
backend/cart/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/categories/: admin.py  serializers.py  urls.py
backend/causehive/: __init__.py  admin_config.py  admin_dashboard.py  admin_widgets.py  apps.py  asgi.py  celery.py  dashboard_views.py  error_views.py  middleware.py  settings.py  settings_production.py  urls.py  wsgi.py
backend/causes/: admin.py  email_utils.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/docs/: ERROR_HANDLING.md
backend/donations/: admin.py  email_utils.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/monolithic_app/: .env.production  RAILWAY_SETUP.md  requirements.txt
backend/notifications/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/payments/: admin.py  models.py  urls.py  views.py
backend/users_n_auth/: admin.py  email_utils.py  models.py  throttles.py  (+3 more)
(+378 files in other folders)
